--- a/playground/public/index.html
+++ b/playground/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Modular-ui</title>
+    <title>Modular-ui-components</title>
     <link rel="manifest" href="https://cianciarusocataldo.github.io/modular-ui/manifest.json" />
     <link rel="shortcut icon" type="image/png" href="https://cianciarusocataldo.github.io/modular-ui/app-icon.ico" />
     <link rel="apple-touch-icon" href="https://cianciarusocataldo.github.io/modular-ui/logo192.png" />
@@ -28,7 +28,7 @@
     </div>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run Modular-ui app</noscript>
+    <noscript>You need to enable JavaScript to run Modular-ui-components app</noscript>
     <input type="hidden" value="%NODE_ENV%" id="node_env_mode" />
     <script>
       var mode = document.querySelector("#node_env_mode").value;
