--- a/404.html
+++ b/404.html
@@ -5,14 +5,14 @@
     <title>Modular-ui</title>
     <script>
       let pathname = window.location.href.replace(
-        "https://cianciarusocataldo.github.io/modular-ui",
+        "https://cianciarusocataldo.github.io/modular-ui-components",
         ""
       );
       if (!pathname.startsWith("/")) {
         pathname = "/" + pathname;
       }
       window.location.href =
-        "https://cianciarusocataldo.github.io/modular-ui?to=" + pathname;
+        "https://cianciarusocataldo.github.io/modular-ui-components?to=" + pathname;
     </script>
   </head>
   <body></body>
