--- a/playground/public/index.html
+++ b/playground/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <title>Modular-ui-components</title>
     <link rel="manifest" href="https://cianciarusocataldo.github.io/modular-ui/manifest.json" />
-    <link rel="shortcut icon" type="image/png" href="https://cianciarusocataldo.github.io/modular-ui/app-icon.ico" />
-    <link rel="apple-touch-icon" href="https://cianciarusocataldo.github.io/modular-ui/logo192.png" />
+    <link rel="shortcut icon" type="image/png" href="https://cianciarusocataldo.github.io/modular-ui-components/app-icon.ico" />
+    <link rel="apple-touch-icon" href="https://cianciarusocataldo.github.io/modular-ui-components/logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#2d3748" />
-    <meta name="description" content="Modular-ui" />
+    <meta name="description" content="Modular-ui-components playground" />
     <style type="text/css">
       .preloader {
         position: fixed;
